[gd_scene load_steps=16 format=2]

[ext_resource path="res://ship/thruster.tscn" type="PackedScene" id=1]
[ext_resource path="res://ship/thruster.gd" type="Script" id=2]
[ext_resource path="res://resource/sounds/thrusters_sustain.ogg" type="AudioStream" id=3]
[ext_resource path="res://ship/PushRocket.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=21]
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
emission_enabled = true
emission = Color( 0.662745, 1, 0.670588, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=14]
material = SubResource( 21 )
radius = 0.5
radial_segments = 8
rings = 6
is_hemisphere = true

[sub_resource type="SpatialMaterial" id=25]
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
emission_enabled = true
emission = Color( 0.403922, 1, 0.321569, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=22]
material = SubResource( 25 )
radius = 0.5
height = 2.599
radial_segments = 8
rings = 6
is_hemisphere = true

[sub_resource type="CylinderMesh" id=26]
top_radius = 0.25
bottom_radius = 0.25

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../thruster_boost/exhaust:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.82836, 2.03131, 1.82836 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "back_thruster_boosting"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../thruster_boost/exhaust:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.82836, 2.03131, 1.82836 ), Vector3( 2.11892, 2.26779, 2.11892 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "back_thruster_running"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1.3, 1 ) ]
}

[sub_resource type="CylinderShape" id=27]
radius = 0.25
height = 1.8

[sub_resource type="SphereShape" id=28]
radius = 0.25

[node name="PushRocket" type="RigidBody"]
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 4 )

[node name="thruster_back" type="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.747385, 0, 0 )
script = ExtResource( 2 )
thruster_vector = Vector3( 2, 0, 0 )
audio = NodePath("audio")

[node name="exhaust" type="MeshInstance" parent="thruster_back"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.473911, -0.0053401, 0 )
layers = 512
mesh = SubResource( 14 )
skeleton = NodePath("../..")
material/0 = null

[node name="OmniLight" type="OmniLight" parent="thruster_back/exhaust"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1.26899, 1.01538, 0 )
light_color = Color( 0.662745, 1, 0.670588, 1 )
light_energy = 4.0
light_cull_mask = 4294966783
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 2.0

[node name="audio" type="AudioStreamPlayer3D" parent="thruster_back"]
stream = ExtResource( 3 )

[node name="thruster_boost" type="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.797715, 0, 0 )
visible = false
script = ExtResource( 2 )
thruster_vector = Vector3( 5, 0, 0 )

[node name="exhaust" type="Spatial" parent="thruster_boost"]
transform = Transform( -7.99201e-08, -2.03131, 0, 1.82836, -8.87914e-08, 0, 0, 0, 1.82836, -0.450281, -0.0053401, 0 )

[node name="part1" type="MeshInstance" parent="thruster_boost/exhaust"]
transform = Transform( 0.712716, 2.84217e-14, 0, 8.88178e-15, 0.703259, 0, 0, 0, 0.712716, -0.00485543, 0.345612, -0.0016394 )
layers = 512
mesh = SubResource( 22 )
skeleton = NodePath("../../..")
material/0 = null

[node name="part2" type="MeshInstance" parent="thruster_boost/exhaust"]
transform = Transform( 0.6764, -3.57468e-08, -5.91328e-08, -1.02134e-07, -0.23674, 6.56963e-08, -5.91328e-08, -2.29937e-08, -0.6764, -0.00460802, 0.332412, -0.00155587 )
layers = 512
mesh = SubResource( 22 )
skeleton = NodePath("../../..")
material/0 = null

[node name="OmniLight" type="OmniLight" parent="thruster_boost/exhaust"]
transform = Transform( 0.546937, 7.10543e-15, 0, -3.55271e-15, 0.492294, 0, 0, 0, 0.546937, 0.498827, 1.47452, 0 )
light_color = Color( 0.662745, 1, 0.670588, 1 )
light_energy = 4.0
light_cull_mask = 4294966783
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 2.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 26 )
material/0 = null

[node name="AnimBoostThruster" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimBackThruster")
autoplay = "back_thruster_boosting"
anims/RESET = SubResource( 23 )
anims/back_thruster_boosting = SubResource( 24 )

[node name="AnimBackThruster" type="AnimationPlayer" parent="."]
root_node = NodePath("../thruster_back/exhaust")
autoplay = "back_thruster_running"
anims/RESET = SubResource( 15 )
anims/back_thruster_running = SubResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.1, 0, 0 )
shape = SubResource( 27 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 28 )

[node name="PinJoint" type="PinJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1 )

[node name="PinJoint2" type="PinJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
